versioned_docs/version-0.1.0/introduction.mdx
---
title: Introduction
sidebar_position: 1
slug: /
---

import CardSection from '@site/src/components/CardSection/CardSection';

# Introduction

Yumma CSS, created by [Renildo Pereira](https://rrenildopereiraa.github.io/renildo/), is a multipurpose CSS library that offers a diverse range of utility classes and components. These components include buttons, navigation bars, cards, and more, making UI development more straightforward and streamlined. Yumma CSS provides a comprehensive set of tools and functionalities to simplify development processes.

## Getting started

Get ready to work with Yumma CSS and the tools that come with it:

<CardSection
  cardData={[
    {
      cardIcon: `${require('@site/static/img/IntroductionPage/button.png').default}`,
      cardTitle: 'Components',
      cardDesc: 'Explore our components to add buttons, navbars, cards, and other elements to your interface.',
    },
    {
      cardIcon: `${require('@site/static/img/IntroductionPage/screen.png').default}`,
      cardTitle: 'Responsiveness',
      cardDesc: 'Customize your design elements with the help of a responsive design system.',
    },
    {
      cardIcon: `${require('@site/static/img/IntroductionPage/code.png').default}`,
      cardTitle: 'Productivity',
      cardDesc: 'Get Yumma CSS snippets in your VS code and boost your development with Yumma CSS Helper.',
    },
  ]}
/>

## Installation

Are you a visual learner? Here it is our 1-minute [video tutorial](https://rrenildopereiraa.github.io/renildo/) on YouTube showing everything about Yumma CSS.

### Install via NPM

* Install the CSS library using npm by running the following command in the directory where your project is located:
npm install `yummacss`:

```bash title="Terminal"
npm install yummacss
```

* In your HTML file's `<head>` section, add a `<head>` tag to include the compiled CSS file.

```html
<link rel="stylesheet" href="node_modules/yummacss/dist/yumma.css">
```

### Integrate via CDN

* Add a `<link>` tag to include the CSS library directly from the CDN in your HTML file's `<head>` section.

```html
<link rel="stylesheet" href="https://unpkg.com/yummacss/dist/yumma.css" crossorigin="anonymous">
```

#### Minified CSS
For faster loading, you can also include the minified version of the CSS:

```html
<link rel="stylesheet" href="https://unpkg.com/yummacss/public/css/yumma.min.css" crossorigin="anonymous">
```

### Stylesheet Options

Choose the stylesheet option that suits your needs:

- **`yumma.css`**: Use this option for improved readability.
- **`yumma.min.css`**: Use this option for faster loading.